    - for naive significance test and effect size calulation, rawCounts will normalized by dividing by totalReadCount per sample
  - implemented computational speedup for datasets with large number of metavariables
  - improved error messaging for an error in BuildHeatmap function
  - metadeconfoundR is now compatible with Unix AND Windows operation systems

Version 0.2.8
  - changes in status label names and correspondong plotting behavior
  - reversed default color scheme for effect size plotting (red = low, blue= high)
  - computation of confidence intervals in model building step now default
  (with added OK_d label for deconfounded but doubtful associations)

Version 0.2.7
  - improved error messages and behavior for no/low number of significant associations
    - can now plot results with only a single feature/and or metadata

Version 0.2.6
  - fixed bug in legend creation of BuildHeatmap(cuneiform = TRUE), direction of association now labeled correctly

Version 0.2.5
  - fixed bug in "keepFeature" functionality of BuildHeatmap()
  - fixed bug in BuildHeatmap() that resulted in incomplete removal of features showing not a single significant association
  - implemented speedup for runs of Metadeconfound(startStop = "naiveStop") with large number of metadata

Version 0.2.4
  - Buildheatmap(cuneiform = TRUE) can now handle NA or zero effect sizes (added new symbol)

Version 0.2.3
  - fixed bug that only occured when metadata oncly has one column
  - implemented speedup when startStop = "naiveStop"

Version 0.2.2
  - added functionality to BuildHeatmap()
    - range of shown effectsizes in using d_range parameter (set to "full" for consitent legend between plots)
    - range of colors used to show effect sizes can be changed using d_col
    - matavariables anf features, that should be kept in the plot even without passing q_cutoff and d_cutoff cutoffs, can be supplied using keepMeta and keepFeature parameters

Version 0.2.1